--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,6 @@ SQLAlchemy = "==1.0.4"
 Werkzeug = "==0.10.4"
 gunicorn = "*"
 pymysql = "*"
-
+flask_cors = "*"
 [requires]
 python_version = "3.6"
